# SIN-Code-PoC-Tool

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
src/poc/: __init__.doc.md  __init__.py  cli.doc.md  cli.py  verifier.doc.md  verifier.py
src/poc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/poc/rules/: __init__.py  bare_except.doc.md  bare_except.py  consistent_returns.doc.md  consistent_returns.py  mutable_defaults.doc.md  mutable_defaults.py  none_comparison.doc.md  none_comparison.py  unclosed_files.doc.md  unclosed_files.py  wildcard_imports.doc.md  wildcard_imports.py
tests/: test_agents_md.py  test_verifier.doc.md  test_verifier.py
tests/fixtures/: bad_code.py  good_code.py
